# stof-cli

./: .gitignore  Cargo.toml  README.md
src/: add.rs  main.rs  publish.rs  remote.rs
src/tests/: ex.stof  import.stof  pkg.stof  remote.stof  test.stof
src/tests/package/: box.stof  excluded.stof  pkg.stof  point.stof
src/tests/run_pkg/: main.stof
