[package]
name = "stof-cli"
version = "0.5.0"
edition = "2021"
authors = ["CJ Cummings <cj@formata.io>"]
description = "The official CLI for Stof. Stof is a unified data interface and interchange format for creating, sharing, and manipulating data."
license = "Apache-2.0"
repository = "https://github.com/dev-formata-io/stof-cli"
homepage = "https://docs.stof.dev"
keywords = ["stof", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "stof"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
nanoid = "0.4.0"
reqwest = "0.12.12"
stof = "0.3.12"
stof-github = "0.1.4"
stof-http = "0.2.3"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
zip = "2.2.3"
