[package]
name = "stof-cli"
version = "0.11.2"
edition = "2024"
authors = ["CJ Cummings <cj@formata.io>"]
description = "The official CLI for standalone Stof. Stof is a simple and embeddable data runtime."
license = "Apache-2.0"
repository = "https://github.com/dev-formata-io/stof-cli"
homepage = "https://docs.stof.dev"
keywords = ["stof", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "stof"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
stof = { version = "0.8.14", features = ["full"] }
