[package]
name = "stof-cli"
version = "0.11.4"
edition = "2024"
authors = ["CJ Cummings <cj@formata.io>"]
description = "The official CLI for standalone Stof. Stof is a smart, declarative runtime for data workflows."
license = "Apache-2.0"
repository = "https://github.com/dev-formata-io/stof-cli"
homepage = "https://docs.stof.dev"
keywords = ["stof", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "stof"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
colog = "1.3.0"
env_logger = "0.11.8"
log = "0.4.28"
stof = { version = "0.8.34", features = ["full"] }
